# inky-dashboard

./: .gitignore  README.md  pyproject.toml
inky_dashboard/: __main__.py
src/inky_dashboard/: __main__.py
