[project]
name = "inky-dashboard"
version = "0.1.0"
description = "Render web pages to Pimoroni Inky E-Ink displays"
readme = "README.md"
authors = [{ name = "David Flemström", email = "david.flemstrom@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "inky>=2.4.0",
    "pillow>=12.3.0",
    "playwright>=1.61.0",
]

[project.scripts]
inky-dashboard = "inky_dashboard.__main__:main"

[dependency-groups]
dev = [
    "ruff>=0.14.0",
]

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I", "UP", "B"]
